-
Bug
-
Resolution: Fixed
-
P3
-
11.0.12, 13, 14
-
b29
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227332 | 14 | Jamsheed C M | P3 | Resolved | Fixed | b05 |
| JDK-8228148 | 13.0.2 | Jamsheed C M | P3 | Resolved | Fixed | b01 |
| JDK-8227984 | 13.0.1 | Jamsheed C M | P3 | Resolved | Fixed | master |
| JDK-8264700 | 11.0.12 | Jamsheed C M | P3 | Resolved | Fixed | b01 |
CTW of SPECjvm2008 hit the following assert on macosx-x64:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/8cd6f162-51f6-4a7f-a76b-32ddeb30fb11-S13073/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2bf8df6d-ff2d-4a35-9d55-2d93b1dea2c1/runs/01230338-cd62-4864-85d4-72b24e29f3ff/workspace/open/src/hotspot/share/opto/phaseX.cpp:737), pid=64776, tid=22019
# assert(t->singleton()) failed: must be a constant
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-ea+0-1370)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-ea+0-1370, mixed mode, sharing, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: /cores/core.64776
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:MaxRAMPercentage=6 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -Xbatch -XX:-UseCounterDecay -XX:-ShowMessageBoxOnError -XX:+UnlockDiagnosticVMOptions -XX:+DisplayVMOutputToStderr -DCompileTheWorldStartAt=0 -DCompileTheWorldStopAt=524 -XX:+WhiteBoxAPI -Xbootclasspath/a:. --add-exports=java.base/jdk.internal.jimage=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/jdk.internal.access=ALL-UNNAMED -XX:+LogCompilation -XX:LogFile=hotspot_jfreechart-1.0.5.jar_0_%p.log -XX:ErrorFile=hs_err_jfreechart-1.0.5.jar_0_%p.log -XX:ReplayDataFile=replay_jfreechart-1.0.5.jar_0_%p.log -XX:CompileCommand=exclude,java/lang/invoke/MethodHandle.* sun.hotspot.tools.ctw.CompileTheWorld /scratch/mesos/jib-master/install/org/spec/SPECjvm2008/1.00/SPECjvm2008-1.00.zip/SPECjvm2008/lib/jfreechart-1.0.5.jar
Host: <host>, MacPro6,1 x86_64 3700 MHz, 8 cores, 16G, Darwin 17.5.0
Time: Fri Jun 21 23:46:09 2019 GMT elapsed time: 24 seconds (0d 0h 0m 24s)
--------------- T H R E A D ---------------
Current thread (0x00007fe093850000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=22019, stack(0x000070000e911000,0x000070000ea11000)]
Current CompileTask:
C2: 24971 3317 b org.jfree.chart.block.BorderArrangement::arrangeRR (624 bytes)
Stack: [0x000070000e911000,0x000070000ea11000], sp=0x000070000ea0d250, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xc0d562] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6de
V [libjvm.dylib+0xc0dc3d] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x419f1c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0xa47215] PhaseTransform::makecon(Type const*)+0x3b
V [libjvm.dylib+0x19ec2a] AddNode::Ideal(PhaseGVN*, bool)+0x1da
V [libjvm.dylib+0xa49572] PhaseIterGVN::transform_old(Node*)+0x1ba
V [libjvm.dylib+0xa49132] PhaseIterGVN::optimize()+0xae
V [libjvm.dylib+0x3927a5] Compile::Optimize()+0x7c9
V [libjvm.dylib+0x390db4] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xaaa
V [libjvm.dylib+0x2c012e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xdc
V [libjvm.dylib+0x3a3c8e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x6da
V [libjvm.dylib+0x3a33dd] CompileBroker::compiler_thread_loop()+0x283
V [libjvm.dylib+0xb8c101] JavaThread::thread_main_inner()+0x1a1
V [libjvm.dylib+0xb8bcb4] JavaThread::run()+0x2aa
V [libjvm.dylib+0xb8876b] Thread::call_run()+0x11b
V [libjvm.dylib+0x9f46e4] thread_native_entry(Thread*)+0x13a
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/8cd6f162-51f6-4a7f-a76b-32ddeb30fb11-S13073/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/2bf8df6d-ff2d-4a35-9d55-2d93b1dea2c1/runs/01230338-cd62-4864-85d4-72b24e29f3ff/workspace/open/src/hotspot/share/opto/phaseX.cpp:737), pid=64776, tid=22019
# assert(t->singleton()) failed: must be a constant
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-ea+0-1370)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-ea+0-1370, mixed mode, sharing, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: /cores/core.64776
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:MaxRAMPercentage=6 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -Xbatch -XX:-UseCounterDecay -XX:-ShowMessageBoxOnError -XX:+UnlockDiagnosticVMOptions -XX:+DisplayVMOutputToStderr -DCompileTheWorldStartAt=0 -DCompileTheWorldStopAt=524 -XX:+WhiteBoxAPI -Xbootclasspath/a:. --add-exports=java.base/jdk.internal.jimage=ALL-UNNAMED --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/jdk.internal.access=ALL-UNNAMED -XX:+LogCompilation -XX:LogFile=hotspot_jfreechart-1.0.5.jar_0_%p.log -XX:ErrorFile=hs_err_jfreechart-1.0.5.jar_0_%p.log -XX:ReplayDataFile=replay_jfreechart-1.0.5.jar_0_%p.log -XX:CompileCommand=exclude,java/lang/invoke/MethodHandle.* sun.hotspot.tools.ctw.CompileTheWorld /scratch/mesos/jib-master/install/org/spec/SPECjvm2008/1.00/SPECjvm2008-1.00.zip/SPECjvm2008/lib/jfreechart-1.0.5.jar
Host: <host>, MacPro6,1 x86_64 3700 MHz, 8 cores, 16G, Darwin 17.5.0
Time: Fri Jun 21 23:46:09 2019 GMT elapsed time: 24 seconds (0d 0h 0m 24s)
--------------- T H R E A D ---------------
Current thread (0x00007fe093850000): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=22019, stack(0x000070000e911000,0x000070000ea11000)]
Current CompileTask:
C2: 24971 3317 b org.jfree.chart.block.BorderArrangement::arrangeRR (624 bytes)
Stack: [0x000070000e911000,0x000070000ea11000], sp=0x000070000ea0d250, free space=1008k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xc0d562] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6de
V [libjvm.dylib+0xc0dc3d] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x419f1c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0xa47215] PhaseTransform::makecon(Type const*)+0x3b
V [libjvm.dylib+0x19ec2a] AddNode::Ideal(PhaseGVN*, bool)+0x1da
V [libjvm.dylib+0xa49572] PhaseIterGVN::transform_old(Node*)+0x1ba
V [libjvm.dylib+0xa49132] PhaseIterGVN::optimize()+0xae
V [libjvm.dylib+0x3927a5] Compile::Optimize()+0x7c9
V [libjvm.dylib+0x390db4] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xaaa
V [libjvm.dylib+0x2c012e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xdc
V [libjvm.dylib+0x3a3c8e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x6da
V [libjvm.dylib+0x3a33dd] CompileBroker::compiler_thread_loop()+0x283
V [libjvm.dylib+0xb8c101] JavaThread::thread_main_inner()+0x1a1
V [libjvm.dylib+0xb8bcb4] JavaThread::run()+0x2aa
V [libjvm.dylib+0xb8876b] Thread::call_run()+0x11b
V [libjvm.dylib+0x9f46e4] thread_native_entry(Thread*)+0x13a
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
- backported by
-
JDK-8227332 assert(t->singleton()) failed: must be a constant
-
- Resolved
-
-
JDK-8227984 assert(t->singleton()) failed: must be a constant
-
- Resolved
-
-
JDK-8228148 assert(t->singleton()) failed: must be a constant
-
- Resolved
-
-
JDK-8264700 assert(t->singleton()) failed: must be a constant
-
- Resolved
-
- relates to
-
JDK-8212043 AArch64: Add floating-point Math.min/max intrinsics
-
- Resolved
-
-
JDK-8217561 x86: Add floating-point Math.min/max intrinsics
-
- Resolved
-
-
JDK-8212043 AArch64: Add floating-point Math.min/max intrinsics
-
- Resolved
-
(2 relates to)