8226627: assert(t->singleton()) failed: must be a constant

Implemented constant folding for MaxFD, MinFD.

Reviewed-by: thartmann, bsrbnd, pli